@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: rpmtar: lash in -z/-j/-y/-Z compression options using popt.
     - jbj: rpmtar: add stoopid file suffix detector for gzip/bzip2/lzma detect.
     - jbj: rpmtar: abandon rpmtar -cvf for now, noop tar_mode_c().
     - jbj: rpmtar: move getdate.y lib -> rpmio for rpmtar linkage.
